完成了主页功能的开发

--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
     <!-- 导入Layui的js -->
     <script src="./assets/lib/layui/layui.js"></script>
     <!-- 导入jQuery -->
-    <script src="./assets/lib/jquery.min.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
     <!-- 导入自己封装的baseAPI -->
     <script src="./assets/js/baseAPI.js"></script>
     <!-- 导入自己的JavaScript脚本 -->
